--- a/variants/PORTENTA_H7_M7/conf/mbed_app.json
+++ b/variants/PORTENTA_H7_M7/conf/mbed_app.json
@@ -15,6 +15,7 @@
       "cellular.at-handler-buffer-size": 512,
       "mbed-trace.enable": true,
       "target.mbed_app_start": "0x8040000",
+      "lwip.raw-socket-enabled": true,
       "target.macros_add": [
         "BT_UART_NO_3M_SUPPORT",
         "USB_DYNAMIC_CONFIGURATION",
