--- a/variants/GIGA/conf/mbed_app.json
+++ b/variants/GIGA/conf/mbed_app.json
@@ -11,6 +11,7 @@
       "rtos.main-thread-stack-size": 32768,
       "cordio.max-connections": 5,
       "target.mbed_app_start": "0x8040000",
+      "lwip.raw-socket-enabled": true,
       "target.macros_add": [
         "METAL_INTERNAL",
         "VIRTIO_DRIVER_ONLY",
